Issue #3170674 by saschaeggi: Logo too small

--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -40,7 +40,6 @@ body.path-user {
       }
 
       img {
-        max-width: 44px;
         max-height: 40px;
       }
     }
